[tool.poetry]
name = "flask-repeat-after-me"
version = "0.1.0"
description = ""
authors = ["xhiroga <13391129+xhiroga@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.3"
Flask = "^2.0.2"
gunicorn = "^20.1.0"
itsdangerous = "^2.0.1"
Jinja2 = "^3.1.4"
MarkupSafe = "^2.0.1"
Werkzeug = "^2.0.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
